--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
   </build>
   
   <dependencies>
+  <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-core</artifactId>
+    <version>5.4.27.Final</version>
+</dependency>
   
 <dependency>
     <groupId>mysql</groupId>
