--- a/Rubrica/pom.xml
+++ b/Rubrica/pom.xml
@@ -17,6 +17,11 @@
     </plugins>
   </build>
    <dependencies>
+   <dependency>
+  		<groupId>org.hibernate</groupId>
+  		<artifactId>hibernate-core</artifactId>
+  		<version>5.4.21.Final</version>
+  	</dependency>
   	<dependency>
   		<groupId>mysql</groupId>
   		<artifactId>mysql-connector-java</artifactId>
